--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -369,9 +369,20 @@ button[type="submit"] {
     background-color: #e84610;
 }
 
+/*-----------Map*/
+
+#map {
+    min-height: 360px;}
+
 /* ------------------------Media Queries*/
 
 @media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
